# gachi-amm

./: .gitignore  .gitmodules  Anchor.toml  CLAUDE.md  Cargo.toml  DATA.md  Makefile  NOTES.md  README.md  biome.json  codama-dammv2.json  codama.json  package.json  tsconfig.json
eth-amm/: .gitignore  CLAUDE.md  README.md  UNISWAP.md  biome.json  bunfig.toml  foundry.toml  package.json
eth-amm/contracts/: DeployPump.s.sol  PumpCurve.sol  (+3 more)
idls/: damm_v2.json  dynamic_vault.json  locker.json
plans/: cashback.md  fix.md
programs/amm/: Cargo.toml
programs/amm/src/: const_pda.rs  constants.rs  curve.rs  errors.rs  events.rs  lib.rs  macros.rs
programs/amm/src/instructions/: ix_claim_creator_fee.rs  ix_create.rs  ix_swap.rs  mod.rs
programs/amm/src/instructions/admin/: auth.rs  ix_claim_protocol_fee.rs  ix_create_config.rs  ix_set_fee_type.rs  mod.rs
programs/amm/src/instructions/cashback/: ix_claim.rs  ix_create.rs  ix_reclaim.rs  ix_update_tier.rs  mod.rs
programs/amm/src/instructions/migration/: ix_create_locker.rs  ix_migrate_damm_v2.rs  mod.rs
programs/amm/src/math/: mod.rs  safe_math.rs  u128x128_math.rs
programs/amm/src/params/: liquidity_distribution.rs  mod.rs
programs/amm/src/states/: bonding_curve.rs  cashback.rs  config.rs  mod.rs
programs/amm/src/utils/: mod.rs  process_create_token_metadata.rs  token.rs
scripts/: deploy-amm-config.ts  fix-codama-issue.ts  get-curve.ts  update-program-id.ts
tests/: admin.test.ts  cashback-litesvm.test.ts  cashback.test.ts  create.test.ts  curve.test.ts  fee-claim.test.ts  migration.test.ts  swap.test.ts
(+82 files in other folders)
